--- a/templates/admin/adminUserProfile.html.twig
+++ b/templates/admin/adminUserProfile.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block Pagetitle %}
-Profil de {{ user.username }} :
+    Profil de {{ user.username }} :
 {% endblock %}
 
 {% block main %}
@@ -15,30 +15,35 @@ Profil de {{ user.username }} :
     </p>
 
     <div class="form">
-    {{ form_start (userAdminModifyForm) }}
-    <div class="form_groupe">
-        {{ form_label (userAdminModifyForm.campus) }}
-        {{ form_widget (userAdminModifyForm.campus) }}
-        {{ form_errors (userAdminModifyForm.campus) }}
-    </div>
-    <div class="form_groupe">
-        {{ form_label (userAdminModifyForm.isActive) }}
-        {{ form_widget (userAdminModifyForm.isActive) }}
-        {{ form_errors (userAdminModifyForm.isActive) }}
-    </div>
-    <div class="form_groupe">
-        {{ form_label (userAdminModifyForm.roles) }}
-        {{ form_widget (userAdminModifyForm.roles) }}
-        {{ form_errors (userAdminModifyForm.roles) }}
-    </div>
-
-        <button type="submit">Modifier le profil de {{ user.username }}</button>
-    <div class="button">
-        <a href="{{ url('admin_delete_profile', {'id':user.getId()}) }}">Supprimer l'utilisateur</a>
-    </div>
-        <div class="button">
-            <a href="{{ url('admin_users_list') }}">Retour</a>
+        {{ form_start (userAdminModifyForm) }}
+        <div class="form_groupe">
+            {{ form_label (userAdminModifyForm.campus) }}
+            {{ form_widget (userAdminModifyForm.campus) }}
+            {{ form_errors (userAdminModifyForm.campus) }}
         </div>
+        <div class="form_groupe">
+            {{ form_label (userAdminModifyForm.isActive) }}
+            {{ form_widget (userAdminModifyForm.isActive) }}
+            {{ form_errors (userAdminModifyForm.isActive) }}
+        </div>
+        <div class="form_groupe">
+            {{ form_label (userAdminModifyForm.roles) }}
+            {{ form_widget (userAdminModifyForm.roles) }}
+            {{ form_errors (userAdminModifyForm.roles) }}
+        </div>
+
+        <div class="group_buttons">
+            <button type="submit">Modifier le profil de {{ user.username }}</button>
+            <div class="button">
+                <a href="{{ url('admin_delete_profile', {'id':user.getId()}) }}">Supprimer l'utilisateur</a>
+            </div>
+            <div class="button">
+                <a href="{{ url('admin_users_list') }}">Retour</a>
+            </div>
+
+        </div>
+
+
         {{ form_end (userAdminModifyForm) }}
     </div>
 
