--- a/templates/user/homeSignedIn.html.twig
+++ b/templates/user/homeSignedIn.html.twig
@@ -41,9 +41,7 @@
                      {{ form_label(form.maxdate) }}
                      {{ form_widget(form.maxdate) }}
                  </div>
-                 <div class="button buttonResetDate">
-                     <a href="{{ url('main_index') }}">Reinitialiser</a>
-                 </div>
+
              </div>
 
          </div>
@@ -74,12 +72,21 @@
              </div>
 
          </div>
+     </div>
 
-         <button type="submit" class="button">Filtrer</button>
+
+     <div class="group_buttons buttonForm">
+             <button type="submit" class="button">Filtrer</button>
+         <div class="button buttonResetDate">
+             <a href="{{ url('main_index') }}">Reinitialiser</a>
+         </div>
+
+         </div>
 
          {{ form_end(form) }}
 
-     </div>
+
+
 
 
 
@@ -102,68 +109,74 @@
              {% for title in filterOutings|batch(8) %}
                  <tr>
                  {% for outing in title %}
-                     <td data-label="Nom de la sortie">{{ outing.name }}</td>
-                     <td data-label="Date de la sortie">{{ outing.startingDateTime|date("d/m/y") }}</td>
-                     <td data-label="Date de clotûre">{{ outing.registrationDeadLine|date("d/m/y") }}</td>
-                     <td data-label="nb d'inscrits/places max">{{ outing.participants|length }}
-                         /{{ outing.maxNumberRegistration }}</td>
-                     <td data-label="Etat de la sortie">{{ outing.state }}</td>
-                     <td data-label="Inscrit(e) ?">
-                         {% if app.user in outing.participants %}
-                             <p>X</p>
-                         {% endif %}
-                     </td>
-                     <td data-label="Organisateur"><a
-                                 href="{{ url('user_show_organizer', {'id':outing.getOrganizer().getId()}) }}">{{ outing.organizer.username }}</a>
 
-
-                     </td>
-                     <td data-label="Actions">
-                         {# TODO :: gérer l'affichage des liens en fonction des inscriptions de l'utilisateur !! et de son statut organisateur ou non #}
-
-                         {% if outing.state == 'En création' %}
-                             {% if app.user == outing.organizer %}
-                                 <a href="{{ url('modify_outing', {'id':outing.getId()}) }}">Modifier/Publier</a>
-                             {% else %}
-                                 <p> Sortie en création<br>Aucune action possible</p>
-                             {% endif %}
-
-                         {% endif %}
-
-                         {% if  outing.state == 'Ouverte' and outing.maxNumberRegistration <= outing.participants|length %}
-                             <p>Complet</p> -
+                     {% if (app.user != outing.organizer and is_granted('ROLE_ADMIN') == false)
+                         and (outing.state == 'En création'or outing.state == 'Annulée') %}
+                     {% else %}
+                         <td data-label="Nom de la sortie">{{ outing.name }}</td>
+                         <td data-label="Date de la sortie">{{ outing.startingDateTime|date("d/m/y") }}</td>
+                         <td data-label="Date de clotûre">{{ outing.registrationDeadLine|date("d/m/y") }}</td>
+                         <td data-label="nb d'inscrits/places max">{{ outing.participants|length }}
+                             /{{ outing.maxNumberRegistration }}</td>
+                         <td data-label="Etat de la sortie">{{ outing.state }}</td>
+                         <td data-label="Inscrit(e) ?">
                              {% if app.user in outing.participants %}
-                                 <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
+                                 <p>X</p>
                              {% endif %}
-                         {% elseif outing.state == 'Ouverte' and outing.maxNumberRegistration > outing.participants|length %}
-                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> -
-                             {% if app.user in outing.participants %}
-                                 <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                             {% else %}
-                                 {% if app.user != outing.organizer %}
-                                 <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
-                                     {% endif %}
+                         </td>
+                         <td data-label="Organisateur"><a
+                                     href="{{ url('user_show_organizer', {'id':outing.getOrganizer().getId()}) }}">{{ outing.organizer.username }}</a>
+
+
+                         </td>
+                         <td data-label="Actions">
+                             {% if outing.state == 'En création' %}
                                  {% if app.user == outing.organizer %}
-                                     <a href="{{ url('cancel_outing', {'id':outing.getId()}) }}">Annuler</a>
-                                     {% endif %}
+                                     <a href="{{ url('modify_outing', {'id':outing.getId()}) }}">Modifier/Publier</a>
+                                 {% endif %}
                              {% endif %}
-                         {% endif %}
-                         {% if outing.state == 'Clôturée' %}
-                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> - <a
-                                 href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se désinscrire</a>
-                         {% endif %}
 
-                         {% if outing.state == 'Terminée' or outing.state == 'En cours' %}
-                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
-                         {% endif %}
+                             {% if  outing.state == 'Ouverte' %}
+                                 <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> -
+                                 {% if outing.maxNumberRegistration <= outing.participants|length %}
+                                     <p>Complet</p> -
+                                     {% if app.user in outing.participants %}
+                                         <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se
+                                             désinscrire</a>
+                                     {% endif %}
+                                 {% elseif outing.state == 'Ouverte' and outing.maxNumberRegistration > outing.participants|length
+                                     and app.user in outing.participants %}
+                                     <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se
+                                         désinscrire</a>
+                                 {% else %}
+                                     <a href="{{ url('user_sign_up_outing', {'id':outing.getId()}) }}">S'inscrire</a>
+                                     {% if app.user == outing.organizer or is_granted('ROLE_ADMIN') %}
+                                         - <a href="{{ url('cancel_outing', {'id':outing.getId()}) }}">Annuler</a>
+                                     {% endif %}
+                                 {% endif %}
+                             {% endif %}
+                             {% if outing.state == 'Clôturée' %}
+                                 <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a> -
+                                 {% if app.user in outing.participants %}
+                                     <a href="{{ url('user_sign_out_outing', {'id':outing.getId()}) }}">Se
+                                         désinscrire</a>
+                                 {% endif %}
+                                 {% if app.user == outing.organizer or is_granted('ROLE_ADMIN') %}
+                                     <a href="{{ url('cancel_outing', {'id':outing.getId()}) }}">Annuler</a>
+                                 {% endif %}
+                             {% endif %}
 
-                         {% if outing.state == 'Archivée' %}
-                             <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
-                         {% endif %}
 
+                             {% if outing.state == 'Terminée' or outing.state == 'En cours' %}
+                                 <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
+                             {% endif %}
 
-                     </td>
+                             {% if outing.state == 'Archivée' %}
+                                 <a href="{{ url('outing_show', {'id':outing.getId()}) }}">Afficher</a>
+                             {% endif %}
 
+                         </td>
+                     {% endif %}
                      </tr>
                  {% endfor %}
 
