Juliette : modifs mineures ajout lien sur le logo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 <body>
 <header>
     <div class="header_blockleft">
-        <img class="logo_header" src="{{ asset("images/logoComplet_invers.png") }}" alt="logo" title="logo Sortir.com">
+        <a href="{{ path('main_index') }}" > <img class="logo_header" src="{{ asset("images/logoComplet_invers.png") }}" alt="logo" title="logo Sortir.com"></a>
 
         {# ********************************************* #}
         <h1>
